# Fatigue_Adaptation_ModelV1

./: .gitignore  README.md  pyproject.toml  run_demo_windows.bat  run_demo_windows.ps1
Data/: DRT.m  GAZE.m  PD.m
Data/ID01/Dual/DRT/: ID01_DRT_0.xlsx  ID01_DRT_1.xlsx  ID01_DRT_2.xlsx  ID01_DRT_c.xlsx
Data/ID01/Dual/ET/: ID01_ET_0.xlsx  ID01_ET_1.xlsx  ID01_ET_2.xlsx  ID01_ET_c.xlsx
Data/ID01/Dual/NASATLX/: ID01_NASATLX_0.csv  ID01_NASATLX_1.csv  ID01_NASATLX_2.csv  ID01_NASATLX_c.csv
Data/ID01/Dual/Nback/: ID01_NBack_2.csv
Data/ID01/Single/ET/: ID01_ET_0.xlsx  ID01_ET_1.xlsx  ID01_ET_2.xlsx
Data/ID01/Single/NASATLX/: ID01_NASATLX_0.csv  ID01_NASATLX_1.csv  ID01_NASATLX_2.csv
Data/ID02/Dual/DRT/: ID02_DRT_0.xlsx  ID02_DRT_1.xlsx  ID02_DRT_2.xlsx  ID02_DRT_c.xlsx
Data/ID02/Dual/ET/: ID02_ET_0.xlsx  ID02_ET_1.xlsx  ID02_ET_2.xlsx  ID02_ET_c.xlsx
Data/ID02/Dual/NASATLX/: ID02_NASATLX_0.csv  (+3 more)
reports/: dataset_inventory.md  demo_client.html  feature_importance.csv  feature_stats.md  feature_summary.md  model_eval_descriptive.md  model_report.md  raw_scan.md  replay_ID01_dual_ID01_ET_0.csv  ws_replay_ID01_dual_ID01_ET_0.csv  ws_replay_ID01_single_ID01_ET_0.csv  ws_replay_ID02_dual_ID02_ET_1.csv
src/fatigue_xr/: __init__.py  adaptation.py  cli.py  colnorm.py  config.py  et_loader.py  evaluate.py  features.py  featurize.py  ingest.py  logging_utils.py  modeling.py  raw_scan.py  replay.py  reporting.py  server.py  standardize_et.py  train.py
src/fatigue_xr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
(+576 files in other folders)
