[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatigue-xr"
version = "0.1.0"
description = "Eye-tracking fatigue and cognitive-load demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "pyarrow",
    "joblib",
    "pydantic",
    "typer",
    "rich",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
